more contact form styling, added useState to send button and fixed mobile footer layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     margin-top: 10px;
     margin-bottom: 6px;
 }
@@ -293,6 +294,16 @@
     padding: 10px 25px;
     border: 1px solid;
     border-radius: 5px;
+}
+
+.contact-email-was-sent {
+    padding: 90px;
+    margin: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px red solid;
 }
 
 
